# crackerjack

./: .betterleaks.toml  .codespell-ignore  .codespellrc  .cov_test  .coverage  .coverage (1)  .coverage-ratchet.json  .coverage.les-pro.51929.XDduxpJx.wgw0  .crackerjack-hooks-updated  .gitignore  .gitignore.bak  .gitleaks.toml  .gitleaksignore  .lycheecache  .lycheeignore  .lycheeignore.backup.json  .mcp-proxy.json  .mcp.json  .mcp.json.backup  .mcp.json.bak  .pre-commit-config-ai.yaml  .pre-commit-config.yaml  .pyscn.toml  .windsurfrules  === Test 1 Complete ===  ACB-FORMAT-ADAPTERS-ANALYSIS.md  ACB-INTEGRATION-PLAN.md  ACB_ARCHITECTURE_ALIGNMENT_FINDINGS.md  AGENT-CAPABILITIES.json  AGENTS.md  AI-AGENT-RULES.md  AI-FIX-IMPLEMENTATION-AND-TEST-PLAN.md  AI-FIX-QUICK-SUMMARY.md  AI-FIX-TEST-RESULTS.md  AI-REFERENCE.md  AI_AGENT_CODE_GENERATION_ANALYSIS.md  AI_AGENT_FAILURE_ANALYSIS.md  AI_AGENT_IMPROVEMENTS_SUMMARY.md  AI_AGENT_INTEGRATION_COMPLETE.md  AI_AGENT_LOGGING_ANALYSIS.md  (+508 more)
crackerjack/: .gitignore  .mcp.json  .mcp.json.bak  .pre-commit-config (1).yaml  .pre-commit-config-ai.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  RULES.md  __init__.py  __main__.py  __main__.py.backup.json  __main___acb_backup.py  api.py  ci_feedback.py  code_cleaner.py  contracts.py  crackerjack.py  dynamic_config.py  errors.py  example.mcp.json  interactive.py  mcp_cache.py  mcp_enterprise.py  mcp_monitor.py  mcp_prioritizer.py  mcp_server.py  mcp_state.py  py313.py  pyproject.toml  reflection_loop.py  server.py  slash_command.py  test_selection.py  utils.py
crackerjack/adapters/: README.md  __init__.py  _output_paths.py  _qa_adapter_base.py  _tool_adapter_base.py  factory.py  factory.py.backup.json  health_mixin.py  lsp_client.py  move_plan.txt  registry.py  rust_tool_adapter.py  rust_tool_manager.py  skylos_adapter.py  zuban_adapter.py
crackerjack/agents/: README.md  __init__.py  analysis_coordinator.py  anti_pattern_agent.py  architect_agent.py  base.py  behavior_validator.py  claude_code_bridge.py  context_agent.py  coordinator.py  coordinator.py.bak  coverage_fan_out_agent.py  dead_code_removal_agent.py  dependency_agent.py  documentation_agent.py  dry_agent.py  enhanced_coordinator.py  enhanced_proactive_agent.py  enhanced_refactoring_agent.py  error_middleware.py  file_context.py  file_context_reader.py  fixer_coordinator.py  fixer_coordinator.py.backup.json  formatting_agent.py  import_optimization_agent.py  import_optimization_agent.py.backup.json  issue_clusterer.py  iterative_fix_agent.py  logic_validator.py  parallel_dispatcher.py  pattern_agent.py  performance_agent.py  performance_helpers.py  performance_tracker.py  planning_agent.py  planning_agent.py.backup.json  proactive_agent.py  proactive_agent.py.bak  qwen_code_bridge.py  (+16 more)
crackerjack/ai_fix/: __init__.py  adapters.py  auto_fixer_pr_creator.py  auto_fixers_manifest.py  code_post_processor.py  fix_router.py  fix_runner.py  fix_sandbox.py  fixer_registry.py  issue_classifier.py  issue_lifecycle.py  llm_codegen.py  output_validator.py  promotion_pipeline.py  sandbox_runner.py  sandboxed_dispatcher.py  tightened_dispatcher.py  working_tree_snapshot.py
crackerjack/cli/: README.md  __init__.py  _rich_utils.py  anti_ai_flavor_cli.py  audit_cli.py  cache_handlers.py  cache_handlers_enhanced.py  clone_cli.py  constants.py  coverage_cli.py  docs_cli.py  facade.py  formatting.py  handlers.py  hypothesis_lock_cli.py  interactive.py  lifecycle_handlers.py  mcp_cli.py  options.py  precommit_cli.py  profile_handlers.py  replay.py  semantic_handlers.py  utils.py  version.py
crackerjack/clone/: __init__.py  classifier.py  grouper.py  refactor_engine.py
crackerjack/config/: README.md  __init__.py  __init__.py.backup.json  global_lock_config.py  global_lock_config.py.backup.json  hooks.py  hooks.py.backup.json  loader.py  mcp_settings_adapter.py  pip_audit_ignores.py  profile_loader.py  settings.py  settings_attempt1.py  tool_commands.py
crackerjack/core/: README.md  acb_di_config.py  ai_fix_event_bus.py  ai_fix_events.py  ai_fix_sinks.py  ai_fix_verbosity.py  async_workflow_orchestrator.py  autofix_coordinator.py  autofix_coordinator.py.backup.json  autofix_coordinator.py.bak  console.py  container.py  defaults.py  enhanced_container.py  eventbridge_adapter.py  eventbridge_publisher.py  eventbridge_resolver.py  file_lifecycle.py  hypothesis_lock.py  performance.py  performance_monitor.py  phase_coordinator.py  phase_coordinator.py.backup.json  precommitment.py  preflight.py  proactive_workflow.py  resource_manager.py  retry.py  service_watchdog.py  session_controller.py  session_coordinator.py  tier3_factory.py  timeout_manager.py  websocket_lifecycle.py  workflow_orchestrator.py
crackerjack/data/: README.md  __init__.py  models.py  repository.py
crackerjack/decorators/: README.md  __init__.py  error_handling.py  error_handling_decorators.py  helpers.py  patterns.py  retry.py  timeout.py  utils.py  validation.py
crackerjack/docs/: INDEX.md  INDEX.md.backup.json  README.md
crackerjack/documentation/: README.md  __init__.py  ai_templates.py  docstring_enricher.py  docstring_extractor.py  dual_output_generator.py  mkdocs_integration.py  reference_generator.py
crackerjack/events/: README.md  __init__.py  telemetry.py  workflow_bus.py
crackerjack/exceptions/: README.md  __init__.py  config.py  tool_execution_error.py
crackerjack/executors/: README.md  __init__.py  async_hook_executor.py  cached_hook_executor.py  cached_hook_executor.py.backup.json  hook_executor.py  hook_executor.py.backup.json  hook_lock_manager.py  individual_hook_executor.py  lsp_aware_hook_executor.py  process_monitor.py  progress_hook_executor.py  tool_proxy.py  tool_proxy.py.backup.json
crackerjack/hooks/: README.md  lsp_hook.py  pool_based_hooks.py
crackerjack/integration/: __init__.py  akosha_integration.py  akosha_integration.py.backup.json  akosha_learning.py  dhara_integration.py  dhara_integration.py.backup.json  dhara_mcp_client.py  dhruva_integration.py  git_metrics_integration.py  git_semantic_search.py  mahavishnu_integration.py  (+10 more)
(+3103 files in other folders)
