[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "crackerjack"
version = "0.47.0"
description = "Crackerjack Python project management tool"
readme = "README.md"
authors = [
    { name = "Les Leslie", email = "les@wedgwoodwebworks.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "codespell>=2.4.1",
    "complexipy>=5.1.0",
    "creosote>=4.1.0",
    "fastapi>=0.124.2",
    "fastmcp>=2.13.2",
    "hatchling>=1.28.0",
    "keyring>=25.7.0",
    "mcp>=1.23.3",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "pyleak>=0.1.14",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.148.7",
    "psutil>=7.1.3",
    "pyyaml>=6.0.3",
    "refurb>=2.2.0",
    "rich>=14.2.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "ruff>=0.14.8",
    "onnxruntime>=1.23.2",
    "oneiric>=0.3.2",
    "transformers>=4.57.3",
    "structlog>=25.5.0",
    "tomli-w>=1.2.0",
    "typer>=0.20.0",
    "uv>=0.9.17",
    "uvicorn>=0.38.0",
    "vulture>=2.14",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
    "skylos>=2.5.3",
    "zuban>=0.3.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-psutil>=7.1.3.20251211",
    "types-aiofiles>=25.1.0.20251011",
    "scipy-stubs>=1.16.3.3",
    "mcp-common>=0.3.6",
    "mdformat>=1.0.0",
    "mdformat-ruff>=0.1.3",
    "linkcheckmd>=1.4.0",
    "uv-bump>=0.3.2",
    "pyscn==1.5.0",
    "pip-audit>=2.10.0",
    "bandit>=1.9.2",
    "bevy>=3.1.0b12",
]

[dependency-groups]
# Development dependencies
# Install with: uv sync --group dev
dev = [
    "excalidraw-mcp>=0.34.0",
    "zensical>=0.0.15",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.scripts]
crackerjack = "crackerjack.__main__:cli"

[project.urls]
documentation = "https://github.com/lesleslie/crackerjack"
homepage = "https://github.com/lesleslie/crackerjack"
repository = "https://github.com/lesleslie/crackerjack"

[tool.hatch.build.targets.wheel]
include = [
    "crackerjack/**/*.py",
    "crackerjack/**/*.md",
]

[tool.ruff]
target-version = "py313"
line-length = 88
fix = true
unsafe-fixes = true
show-fixes = true
output-format = "full"
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.crackerjack]
mcp_http_port = 8676
mcp_http_host = "127.0.0.1"
mcp_websocket_port = 8675
mcp_http_enabled = true
zuban_lsp_enabled = false
zuban_lsp_host = "127.0.0.1"
zuban_lsp_port = 8677
zuban_lsp_timeout = 120.0
zuban_lsp_strict_mode = true
terminal_width = 70

# Test parallelization settings
test_workers = 0  # 0 = auto-detect, 1 = sequential, >1 = explicit, <0 = fractional
max_workers = 8  # Maximum parallel workers (safety limit)
memory_per_worker_gb = 2.0  # Minimum memory per worker (prevents OOM)

[tool.codespell]
# Note: Native wrapper (crackerjack.tools.codespell_wrapper) uses git ls-files
# to discover files, automatically respecting .gitignore patterns.
# No skip patterns needed.
quiet-level = 3
ignore-words-list = "crate,uptodate,nd,nin"
ignore-words = ".codespell-ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
addopts = "--cov=crackerjack --cov-report=term-missing:skip-covered --cov-report=html:htmlcov --cov-report=json --strict-markers --strict-config -ra --tb=short"
testpaths = [
    "tests",
]
norecursedirs = [
    "~",
    ".git",
    "*.egg",
    "build",
    "dist",
    ".venv",
    "__pycache__",
    "node_modules",
]
# Test execution strategies by marker:
# - Default (CI/pre-commit): pytest -m "not benchmark and not slow"
# - Fast (unit only):        pytest -m "unit and not benchmark and not slow"
# - Nightly (comprehensive): pytest -m "not benchmark"
# - Weekly (performance):    pytest -m benchmark --benchmark-only
markers = [
    "unit: marks test as a unit test",
    "benchmark: mark test as a benchmark (skipped by default, run with: pytest -m benchmark)",
    "integration: marks test as an integration test",
    "e2e: marks test as end-to-end test",
    "security: marks test as security test",
    "performance: marks test as performance test",
    "slow: marks test as slow running test (>2s, skipped in fast runs)",
    "smoke: marks test as smoke test",
    "regression: marks test as regression test",
    "api: marks test as API test",
    "database: marks test as database test",
    "external: marks test requiring external services",
    "no_leaks: detect asyncio task leaks",
    "property: marks test as property-based test",
    "mutation: marks test as mutation testing",
    "chaos: marks test as chaos engineering test",
    "ai_generated: marks test as AI-generated test",
    "breakthrough: marks test as breakthrough frontier test",
]
# pytest-benchmark configuration (CLI options, not ini_options)
# Benchmark settings are passed via command line or kept in separate [tool.pytest.benchmark]
# Removed to avoid "Unknown config option" warnings

[tool.coverage.run]
branch = true  # Enable branch coverage for more accurate metrics
source = [
    "crackerjack",
]
data_file = ".coverage"
parallel = true
concurrency = ["multiprocessing"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
    "crackerjack/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[tool.pyright]
verboseOutput = true
include = [
    "crackerjack",
]
exclude = [
    "scratch",
    ".venv",
    "*/.venv",
    "**/.venv",
    "build",
    "dist",
    "tests/*",
    "examples/*",
    "crackerjack/mcp/*",
    "crackerjack/plugins/*",
]
extraPaths = [
    ".venv/lib/python3.13/site-packages/",
]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportOptionalMemberAccess = false
reportOptionalCall = "warning"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportInvalidTypeForm = "warning"
reportUnknownLambdaType = false
reportUnknownParameterType = false
reportPrivateUsage = false
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnnecessaryComparison = "warning"
reportConstantRedefinition = "warning"
pythonVersion = "3.13"

[tool.uv]
keyring-provider = "subprocess"
publish-url = "https://upload.pypi.org/legacy/"
check-url = "https://pypi.org/simple/"


[tool.creosote]
paths = [
    "crackerjack",
]
deps-file = "pyproject.toml"
exclude-deps = [
    "hatchling",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-benchmark",
    "pyyaml",
    "uv",
    "uv-bump",
    "pip-audit",
    "tomli-w",
    "google-crc32c",
    "pytest-timeout",
    "keyring",
    "pydantic-settings",
    "pyleak",
    "bandit",
    "vulture",
    "pyright",
    "creosote",
    "refurb",
    "complexipy",
    "codespell",
    "fastapi",
    "fastmcp",
    "uvicorn",
    "websockets",
    "watchdog",
    "ruff",
    "hypothesis",
    "psutil",
    "skylos",
    "zuban",
    "types-pyyaml",
    "types-psutil",
    "types-aiofiles",
    "onnxruntime",
    "transformers",
    "scipy",
    "scikit-learn",
    "numpy",
    "linkcheckmd",
    "nltk",
    "scipy-stubs",
    "structlog",
    "mdformat",
    "mdformat-ruff",
    "bevy",
]

[tool.refurb]
enable_all = true
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",  # Already applies to ALL files including tests
    "FURB120",  # Already applies to ALL files including tests
]

[tool.bandit]
target = [
    "crackerjack",
]
skips = [
    "B101",
    "B110",
    "B112",
    "B404",
    "B603",
    "B607",
]
exclude_dirs = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
]
max_complexity = 15

[tool.mypy]
python_version = "3.13"

[tool.zuban]
strict = true
show_error_codes = true
exclude = [
    ".venv",
    "venv",
    ".tox",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    ".uv_cache",
    ".git",
    ".hg",
    ".svn",
    "build",
    "dist",
    ".eggs",
    ".*\\.egg-info",
    "node_modules",
    ".vscode",
    ".idea",
    "docs/_build",
    "tests",
]

[tool.zuban.lsp]
host = "127.0.0.1"
port = 8677
timeout = 120.0
enable_diagnostics = true
real_time_feedback = true
