[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "crackerjack"
version = "0.69.1"
description = "Crackerjack Python project management tool"
readme = "README.md"
authors = [
    { name = "Les Leslie", email = "les@wedgwoodwebworks.com" },
]
requires-python = ">=3.13"
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "bandit>=1.9.4",
    "codespell>=2.4.2",
    "complexipy>=5.6.1",
    "creosote>=5.2.0",
    "docstring-to-markdown>=0.17",
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "hatchling>=1.30.1",
    "hypothesis>=6.155.7",
    "ipython>=9.14.1",
    "libcst>=1.8.6",
    "keyring>=25.7.0",
    "linkcheckmd>=1.4.0",
    "mcp>=1.28.0",
    "mcp-common>=0.16.4",
    "mdformat>=1.0.0",
    "mdformat-ruff>=0.1.3",
    "numpy>=2.5.0",
    "oneiric>=0.13.3",
    "pip-audit>=2.10.1",
    "pyleak>=0.2.0",
    "pyscn==1.5.0",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-snob>=0.1.14",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "redbaron>=0.9.2",
    "pyyaml>=6.0.3",
    "refurb>=2.3.1",
    "rich>=15.0.0",
    "ruff>=0.15.18",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "scipy-stubs>=1.18.0.0",
    "skylos>=4.25.0",
    "structlog>=26.1.0",
    "tomli-w>=1.2.0",
    "typer>=0.26.7",
    "uuid-utils>=0.16.2",
    "types-aiofiles>=25.1.0.20260518",
    "types-psutil>=7.2.2.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "unidiff>=0.7.5",
    "uv>=0.11.23",
    "uv-bump>=0.5.0",
    "uvicorn>=0.49.0",
    "vulture>=2.16",
    "watchdog>=6.0.0",
    "websockets>=16.0",
    "zuban>=0.8.2",
    "sqlmodel>=0.0.38",
    "transformers>=5.12.1",
    "pypistats>=1.13.0",
    "cohesion>=1.2.0",
    "syrupy>=5.3.2",
    "pymetrica>=1.5.6",
]

[project.license]
text = "BSD-3-CLAUSE"

[project.scripts]
crackerjack = "crackerjack.__main__:cli"

[project.urls]
documentation = "https://github.com/lesleslie/crackerjack"
homepage = "https://github.com/lesleslie/crackerjack"
repository = "https://github.com/lesleslie/crackerjack"

# PEP 735 dependency-groups (replaces [project.optional-dependencies]).
# Install with: uv sync --group dev --group session --group adapter-learning --group type-checking
[dependency-groups]
dev = [
    "zensical>=0.0.46",
    "crackerjack",
    "duckdb>=1.5.4",
]
session = [
    "session-buddy>=0.19.18",
]

# Adapter-learning group: dhara adapter persistence + aiosqlite.
# Install when developing or running crackerjack adapters against dhara.
adapter-learning = [
    "aiosqlite>=0.22.1",
    "dhara>=0.11.2",
]

# Type-checking group: experimental type checkers.
# pyrefly and ty are alternatives to zuban; install one to try them.
type-checking = [
    "pyrefly>=1.1.1",
    "ty>=0.0.51",
]

# neural group intentionally empty — sentence-transformers and torch removed.
# Crackerjack uses FallbackIssueEmbedder (TF-IDF via scikit-learn) when neural
# embeddings are unavailable. See crackerjack/memory/issue_embedder.py and
# crackerjack/memory/git_history_embedder.py. The fallback path uses
# scikit-learn which is already a main dependency.
# No torch or sentence-transformers needed.
neural = []

[tool.hatch.build.targets.wheel]
include = [
    "crackerjack/**/*.py",
    "crackerjack/**/*.md",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.ruff.lint]
extend-select = [
    "C901",
    "F",
    "I",
    "UP",
]
ignore = [
    "E402",
    "F821",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.mccabe]
# Match [tool.complexipy] max_complexity (25) so a function passing
# one doesn't fail the other for trivial reasons.
max-complexity = 25

[tool.crackerjack]
mcp_http_port = 8676
mcp_http_host = "127.0.0.1"
mcp_websocket_port = 8675
mcp_http_enabled = true
zuban_lsp_enabled = true
zuban_lsp_host = "127.0.0.1"
zuban_lsp_port = 8677
zuban_lsp_timeout = 120.0
zuban_lsp_strict_mode = true
terminal_width = 70
skylos_timeout = 900
# Refurb on the crackerjack package takes ~22 min when run
# alone and ~57 min when run in parallel with the rest of
# the comprehensive suite (CPU contention slows it ~2-3x).
# 1800s (30 min) is the realistic floor: it gives the hook
# a fair shot at completing the full codebase while still
# bounding runaway runs. Operators wanting tighter
# enforcement should run ``refurb`` separately, e.g.
# ``uv run refurb crackerjack/``.
refurb_timeout = 1800
zuban_timeout = 60
semgrep_timeout = 300
pyscn_timeout = 60
gitleaks_timeout = 60
complexipy_timeout = 720
creosote_timeout = 300
# pymetrica run-all ./crackerjack -a measured at 248s locally; 1200s gives
# ~5x headroom over the runtime for slow CI runners and sandboxed envs.
# (Earlier 360s cap was hit on slower machines; bumped 2026-07-14.)
pymetrica_timeout = 1200
test_workers = 0
max_workers = 8
memory_per_worker_gb = 2.0

# ty type-check ratchet enforced by ``crackerjack.tools.ty_ratchet``.
# Phase L production baseline: 143 diagnostics. Set 50 above baseline
# for headroom. Production code is now clean of invalid-argument-type
# (was 19, fixed by L.C). Test files have ~194 remaining out of scope.
# Next push: tighten by 20-30 when the test-file mass-suppressions are
# audited (Phase M candidate).

# Legacy single-target budget. Used when invoking:
#   python -m crackerjack.tools.ty_ratchet <path>
# IGNORED when --split is passed.
ty_max_errors = 200

# Split budgets (Phase Q). Used when invoking:
#   python -m crackerjack.tools.ty_ratchet --split
# Both fields are read independently; neither consults `ty_max_errors`.
# Phased ramp per plan §Q.1: start at the legacy level (200/800) and tighten
# over weeks. Current prod count is 56 (post-Phase R.F — Q.2 ramp); current
# test count is 755 (mostly mass-Mock fixtures awaiting audit).
ty_max_errors_prod = 150
ty_max_errors_test = 1000

[tool.codespell]
quiet-level = 3
ignore-words-list = [
    "crate,uptodate,nd,nin,som,NotIn",
]
ignore-words = ".codespell-ignore"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 600
addopts = "--cov=crackerjack --cov-report=term-missing:skip-covered --cov-report=html:htmlcov --cov-report=json --strict-markers --strict-config -ra --tb=short"
testpaths = [
    "tests",
]
norecursedirs = [
    "~",
    ".git",
    "*.egg",
    "build",
    "dist",
    ".venv",
    "__pycache__",
    "node_modules",
]
markers = [
    "unit: marks test as a unit test",
    "benchmark: mark test as a benchmark (skipped by default, run with: pytest -m benchmark)",
    "integration: marks test as an integration test",
    "e2e: marks test as end-to-end test",
    "security: marks test as a security test",
    "performance: marks test as a performance test",
    "slow: marks test as slow running test (>2s, skipped in fast runs)",
    "smoke: marks test as a smoke test",
    "regression: marks test as a regression test",
    "api: marks test as API test",
    "database: marks test as a database test",
    "external: marks test requiring external services",
    "no_leaks: detect asyncio task leaks",
    "property: marks test as a property-based test",
    "mutation: marks test as mutation testing",
    "chaos: marks test as chaos engineering test",
    "ai_generated: marks test as AI-generated test",
    "breakthrough: marks test as breakthrough frontier test",
]

[tool.coverage.run]
branch = true
source = [
    "crackerjack",
]
data_file = ".coverage"
parallel = true
concurrency = [
    "multiprocessing",
]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__pycache__/*",
    "*/__init__.py",
    "*/_version.py",
    "*/conftest.py",
    "*/test_*.py",
    "*/_test.py",
    "crackerjack/__main__.py",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "pass",
    "raise ImportError",
    "except ImportError",
    "def __str__",
    "@abstractmethod",
]
ignore_errors = false

[tool.pyright]
include = [
    "crackerjack",
]
exclude = [
    "tests/*",
    "scratch",
    ".venv",
    "build",
    "dist",
    "crackerjack/mcp/*",
    "crackerjack/plugins/*",
    "crackerjack/tools/*",
]
typeCheckingMode = "strict"
pythonVersion = "3.13"

[tool.uv]
keyring-provider = "subprocess"
publish-url = "https://upload.pypi.org/legacy/"
check-url = "https://pypi.org/simple/"
exclude-newer = "7 days"
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

# Bodai ecosystem + CVE carve-outs — packages whose release falls inside
# the 7-day exclude-newer window need a per-package override so the fix
# (or new Bodai release) can land without waiting for the cooldown.
#
# Two carve-out classes:
#   1. Bodai components — we want same-day access to ecosystem releases
#      so cross-repo changes can be validated immediately. List every
#      Bodai package crackerjack depends on (check `uv tree` if unsure).
#   2. CVE fixes — packages whose security-fix release falls inside the
#      7-day window; per-package override lets the fix land immediately.
#
# Far-future timestamps disable the cooldown for that package only.
[tool.uv.exclude-newer-package]
# Bodai ecosystem — see also CLAUDE.md "Memory Routing" / ecosystem map.
mcp-common = "2099-12-31T23:59:59Z"
dhara = "2099-12-31T23:59:59Z"
oneiric = "2099-12-31T23:59:59Z"
session-buddy = "2099-12-31T23:59:59Z"

[tool.pip-audit]
ignore-vulns = [
    "CVE-2025-69872",
]

[tool.creosote]
paths = [
    "crackerjack",
]
deps-file = "pyproject.toml"
exclude-deps = [
    # aiosqlite is consumed by dhara.storage.sqlite (its URL driver);
    # crackerjack never imports it by name. Without this exclude, creosote
    # flags it as unused every time aiosqlite is added as a main dep.
    "aiosqlite",
    "hatchling",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-snob",
    "uv",
    "uv-bump",
    "pytest-timeout",
    "keyring",
    "pyleak",
    "uvicorn",
    "hypothesis",
    "types-pyyaml",
    "types-psutil",
    "types-aiofiles",
    "scipy-stubs",
    "mdformat",
    "ipython",
    # Lazy-import false positives (used via import inside function bodies):
    "complexipy",
    "fastapi",
    "linkcheckmd",
    "mdformat-ruff",
    "watchdog",
    "websockets",
]

[tool.refurb]
enable_all = false
quiet = true
python_version = "3.13"
ignore = [
    "FURB184",
    "FURB120",
    "FURB137",
]

[tool.bandit]
skips = [
    "B101",
    "B110",
    "B112",
    "B404",
    "B603",
    "B607",
]
exclude_dirs = [
    "tests/",
    "test_*.py",
    "*_test.py",
]

[tool.complexipy]
default_pattern = "**/*.py"
exclude_patterns = [
    "**/tests/**",
    "**/test_*.py",
]
max_complexity = 25  # Matches [tool.ruff.lint.mccabe] max-complexity = 25

[tool.mdformat]
skip = [
    "docs/archive/**",
    "**/archives/**",
    "*_COMPLETE.md",
    "*_ANALYSIS.md",
    "*_PROGRESS.md",
    "*_STATUS.md",
    "*_PLAN.md",
    "*_SUMMARY.md",
    "CHECKPOINT_*.md",
    "NOTES.md",
    "CLAUDE*.md",
]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = false
warn_redundant_casts = false
warn_unused_ignores = false
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_unreachable = false
follow_imports = "\"skip\""
ignore_errors = false
no_implicit_optional = true
allow_redefinition = true
strict_optional = false
exclude = "^(\\.venv|venv|\\.tox|__pycache__)(/|$)"

# Pymetrica scope — exclude AST-transform helpers (high cyclomatic density,
# intentionally complex) so the comprehensive metrics run stays within budget.
# See crackerjack/config/settings.py:AdapterTimeouts.pymetrica_timeout.
# Patterns are fnmatch against path.relative_to(base) where base is the
# directory passed to `pymetrica run-all` (crackerjack/), so the relative
# paths start at agents/... — not crackerjack/agents/....
[tool.pymetrica]
exclude = [
    "agents/helpers/ast_transform/**",
]
